--- a/my-app-2/src/App.css
+++ b/my-app-2/src/App.css
@@ -51,3 +51,8 @@ nav>ul>li{
   list-style: none;
   margin: 0 2rem;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  background-color: cornflowerblue;
+}
